# ts_cpp_package

./: .gitignore  CMakeLists.txt  README.md  binding.gyp  package-lock.json  package.json  tsconfig.json
src/: addon.cpp  addon.d.ts  bindings.ts  cpp_wrapper.cpp  hello.cpp  index.js  index.ts  typescriptFunctions.ts
